Fixed: a few possible bugs with file renaming
-Fixed bug where old filenames were not getting deleted from settings.pageData when renamed.

-Forbid filenames with names that had no alphanumeric characters (would result in a blank JavaScript ID)

-Forbid filenames that duplicated other filenames when both were stripped of alphanumeric characters (to avoid overlap with JavaScript IDs).

-In solving this, Tim told me he didn't realize an error message popped up on the console. I changed the border highlighting to whole-div highlighting to help emphasize it, and added warn/error/log colours.

This introduced a new bug I'll fix in the next commit.

--- a/css/meiEditor.css
+++ b/css/meiEditor.css
@@ -4,6 +4,9 @@ html, body{
 #topbarContent > li > a{
     cursor: pointer;
 }
+#topbarContent{
+    width:100%;
+}
 #openPages{
 }
 #pagesList > li > span{
@@ -76,10 +79,17 @@ input.input-ui-emulator{
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 }
 .regularBorder{
+    background-color:rgba(255, 255, 255, 1);
     border: .1em #AAAAAA solid;
 }
-.alertBorder{
-    border: .1em #000000 solid;
+.errorBorder{
+    background-color:rgba(255, 0, 0, .3);
+}
+.warnBorder{
+    background-color:rgba(255, 255, 0, .3);
+}
+.logBorder{
+    background-color:rgba(0, 255, 0, .3);
 }
 .gutterError{
     background-color:#F00;
@@ -94,4 +104,7 @@ input.input-ui-emulator{
     top:-.3em;
     height:.3em;
     cursor:ns-resize;
+}
+.navbar-right{
+    float:right;
 }
